--- a/androidmodernarchetype/build.gradle
+++ b/androidmodernarchetype/build.gradle
@@ -5,15 +5,21 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4+'
     }
 
 }
-apply plugin: 'com.android.application'
-
 repositories {
     jcenter()
     mavenCentral()
+    mavenLocal()
+    maven {
+        url "http://files.couchbase.com/maven2/"
+    }
 }
+apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+def AAVersion = '3.0'
 
 android {
     compileSdkVersion 19
@@ -21,20 +27,36 @@ android {
 
     defaultConfig {
         applicationId "org.android.modern"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    // workaround for "duplicate files during packaging of APK" issue
+// see https://groups.google.com/d/msg/adt-dev/bl5Rc4Szpzg/wC8cylTWuIEJ
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java', 'build/generated/source/apt/${variant.dirName}']
+            resources.srcDirs = ['src/main/resources']
+            res.srcDirs = ['src/main/res']
+            assets.srcDirs = ['src/main/assets']
         }
     }
 }
@@ -46,8 +68,23 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:19.1.0'
     compile 'javax.inject:javax.inject:1'
     compile 'com.jakewharton:butterknife:5.1.2'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
-    compile 'com.squareup.dagger:dagger:1.2.1'
     compile 'com.squareup.retrofit:retrofit:1.7.1'
     compile 'com.squareup:otto:1.3.5'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.couchbase.lite:couchbase-lite-android:1.0.2'
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
+}
+apt {
+    arguments {
+        androidManifestFile variant.processResources.manifestFile
+        resourcePackageName 'org.android'
+
+        // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
+        // resourcePackageName android.defaultConfig.packageName
+
+        // You can set optional annotation processing options here, like these commented options:
+        // logLevel 'INFO'
+        // logFile '/var/log/aa.log'
+    }
 }
