--- a/androidmodernarchetype/src/main/AndroidManifest.xml
+++ b/androidmodernarchetype/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="org.android" >
 
     <application
-        android:name=".modern.configuration.Application"
+        android:name=".modern.configuration.Application_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".modern.app.activity.MainActivity"
+            android:name=".modern.app.activity.MainActivity_"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
