Dependency Injection samples in activity
Also added startup listener capability.

Added some sample codes in order to showcase how to use android
annotations in code practically

--- a/androidmodernarchetype/src/main/AndroidManifest.xml
+++ b/androidmodernarchetype/src/main/AndroidManifest.xml
@@ -17,6 +17,33 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Startup listeners section -->
+        <receiver
+            android:name=".modern.configuration.startup.SampleStartupReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".modern.configuration.startup.SampleStartupReceiver2"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".modern.configuration.objectstore.CouchbaseStartupInitializer_"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
+            </intent-filter>
+        </receiver>
+        <!-- Startup listeners section -->
     </application>
 
 </manifest>
