--- a/androidmodernarchetype/src/main/AndroidManifest.xml
+++ b/androidmodernarchetype/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".modern.app.activity.MainActivity_"
+            android:name=".modern.app.view.MainActivity_"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
