--- a/androidmodernarchetype/src/main/AndroidManifest.xml
+++ b/androidmodernarchetype/src/main/AndroidManifest.xml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.android" >
+<!--suppress Annotator -->
+<manifest package="org.android"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:installLocation="auto">
 
     <application
-        android:name=".modern.configuration.Application_"
+        android:name="org.android.modern.config.Application_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:largeHeap="true"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".modern.app.view.MainActivity_"
-            android:label="@string/app_name" >
+            android:name="org.android.modern.app.view.MainActivity_"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <!-- Startup listeners section -->
         <receiver
-            android:name=".modern.configuration.startup.SampleStartupReceiver"
+            android:name="org.android.modern.config.startup.SampleStartupReceiver"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
+                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION"/>
             </intent-filter>
         </receiver>
         <receiver
-            android:name=".modern.configuration.startup.SampleStartupReceiver2"
+            android:name="org.android.modern.config.startup.SampleStartupReceiver2"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
-            </intent-filter>
-        </receiver>
-        <receiver
-            android:name=".modern.configuration.objectstore.CouchbaseStartupInitializer_"
-            android:enabled="true"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION" />
+                <action android:name="org.android.APPLICATION_STARTUP_BROADCAST_ACTION"/>
             </intent-filter>
         </receiver>
         <!-- Startup listeners section -->
+
+        <provider
+            android:name="org.android.modern.app.repository.SampleContentProvider"
+            android:authorities="org.android"
+            android:enabled="true"
+            android:exported="true">
+        </provider>
+
     </application>
 
 </manifest>
